# rrtstar_and_trajopt

./: .gitignore  Makefile  README.md  bad_states.txt  plot_run.sh  stddev_run.sh
examples/: common.mk
examples/standalone/: Makefile
other_things/2d_signed_distance_library_cpp/: .cproject  .project  Makefile  distancePolygons.h  distancePolygons.hpp  signedDistancePolygons.h  signedDistancePolygons.hpp  signedDistanceUtils.h  signedDistanceUtils.hpp  test  test.cpp
other_things/My_AnytimeRRT_Impl/double_integrator/: CMakeLists.txt  anytimeRRT.cpp  anytimeRRT.h  plot_anytimeRRT.h  python_plot.py
other_things/My_BITStar_Impl/acrobot/: CMakeLists.txt  bitstar.cpp  bitstar.h  plot_bitstar.h  python_plot.py
other_things/My_BITStar_Impl/cartpole/: CMakeLists.txt  bitstar.cpp  bitstar.h  bitstar_good.cpp  cartpole_sqp_good.hpp  plot_bitstar.h  python_plot.py  statistics_1000_iters.txt
other_things/My_BITStar_Impl/double_integrator/: CMakeLists.txt  bitstar.cpp  bitstar.h  plot_bitstar.h  python_plot.py
other_things/My_BITStar_Impl/double_integrator_exact_connector/: CMakeLists.txt  bitstar.cpp  bitstar.h  exact_connector.hpp  plot_bitstar.h  python_plot.py
other_things/My_BITStar_Impl/point_robot/: .cproject  .project  CMakeLists.txt  Edge.h  Node.h  SetupObject.h  bitstar.cpp  bitstar.h  callgrind.out.11409  plot_bitstar.cpp  plot_bitstar.h  python_plot.py
other_things/My_BITStar_Impl/rally_car/: CMakeLists.txt  bitstar.cpp  bitstar.h  plot_bitstar.h  python_plot.py
other_things/My_SST_Impl/cartpole/: cp_states.txt  plot_sst.cpp  python_plot.py
other_things/My_SST_Impl/double_integrator/: .cproject  .project  SetupObject.h  plot_sst.cpp  python_plot.py  statistics_100000_iters.txt  statistics_500000_iters.txt
other_things/My_SST_Impl/point_robot/: .cproject  CMakeLists.txt  Node.h  plot_sst.cpp  python_plot.py
other_things/discrete_double_integrator_acado/: CMakeLists.txt  discrete_double_integrator.cpp
other_things/double_int_trajOpt_matlab/: double_integrator_dynamics.m  double_integrator_trajectory_dynamics.m  euler_method.m  exact_double_integrator_integration.m  find_path_with_trajopt.m  find_path_with_trajopt.m~  g_collisions.m  matlab.mat  my_penalty_sqp.m  obstacles.mat  penalty_sqp.m  plot_traj.m  recover_inputs_double_integrator.m  rk4.m  signed_distance_test.m  sim_double_integrator_jacobian.m  swept_out_volume_collisions.m  swv_collisions.m  test_traj_opt.m
other_things/double_integrator_FORCES/: SQP_Inner_Loop_gen_CD.m  SQP_Inner_Loop_gen_noCD.m  SQP_Inner_Loop_gen_noCD_exp.m  arguments.m  double_integrator_QP_solver_CD.mexmaci64  double_integrator_QP_solver_noCD.mexmaci64  double_integrator_QP_solver_noCD_exp.m  double_integrator_QP_solver_noCD_mex.mexa64  double_integrator_QP_solver_noCD_simulinkBlock.mexa64  double_integrator_QP_solver_noCD_simulinkBlock.mexmaci64  double_integrator_QP_solver_noCD_simulinkBlockcompact.mexmaci64  matlab.mat  run_QP_solver_CD.m  run_QP_solver_noCD.m  run_QP_solver_noCD_exp.m
other_things/double_integrator_FORCES/FORCES_PRO/: LTI_MPC_lib.mdl  MultistageProblem.p  configure_block.p  generateCode.p  getAllOutputs.p  getOptions.p  get_userid.m  newOutput.p  newParam.p
other_things/double_integrator_FORCES/SQP/: .cproject  .project  CMakeLists.txt  double_integrator_sqp.cpp
other_things/double_integrator_FORCES/SQP/without_CD/: .cproject  .project  CMakeLists.txt  double_integrator_QP_solver_noCD.c  double_integrator_QP_solver_noCD.h  double_integrator_noCD_sqp.cpp  double_integrator_noCD_sqp.hpp
other_things/double_integrator_FORCES/double_integrator_QP_solver_CD/: double_integrator_QP_solver_CD.m
other_things/double_integrator_FORCES/double_integrator_QP_solver_noCD/: double_integrator_QP_solver_noCD.m
other_things/double_integrator_FORCES/solver/: double_integrator_QP_solver12.c  double_integrator_QP_solver12.h  double_integrator_QP_solver20.c  double_integrator_QP_solver20.h  double_integrator_QP_solver_CD12.c  double_integrator_QP_solver_CD12.h  double_integrator_QP_solver_noCD12.c  (+3 more)
other_things/double_integrator_acado/: CMakeLists.txt  double_integrator_acado.cpp
other_things/double_integrator_dynamics_library/: .cproject  .project  double_integrator_dynamics.h  double_integrator_dynamics.hpp  test  test.cpp
other_things/dynamics_library/: Makefile  dynamics_library.h  dynamics_library.hpp  test  test.cpp
other_things/zlittlefield-sparse_rrt-3962ce1c0839/: .hg_archival.txt  CMakeLists.txt  README
other_things/zlittlefield-sparse_rrt-3962ce1c0839/include/motion_planners/: planner.hpp  rrt.hpp  sst.hpp
other_things/zlittlefield-sparse_rrt-3962ce1c0839/include/systems/: cart_pole.hpp  double_integrator.hpp  two_link_acrobot.hpp
other_things/zlittlefield-sparse_rrt-3962ce1c0839/include/utilities/: condition_check.hpp  parameter_reader.hpp
other_things/zlittlefield-sparse_rrt-3962ce1c0839/input/: sst_acrobot.cfg  sst_cart_pole.cfg  sst_double_integrator.cfg  sst_rally_car.cfg
other_things/zlittlefield-sparse_rrt-3962ce1c0839/lib/: libSparseRRT.dylib
other_things/zlittlefield-sparse_rrt-3962ce1c0839/src/motion_planners/: planner.cpp  rrt.cpp  sst.cpp
other_things/zlittlefield-sparse_rrt-3962ce1c0839/src/nearest_neighbors/: graph_nearest_neighbors.cpp
other_things/zlittlefield-sparse_rrt-3962ce1c0839/src/systems/: cart_pole.cpp  cart_pole_BACK.cpp  double_integrator.cpp  rally_car.cpp  two_link_acrobot.cpp
other_things/zlittlefield-sparse_rrt-3962ce1c0839/src/utilities/: condition_check.cpp  parameter_reader.cpp
other_things/zlittlefield-sparse_rrt-3962ce1c0839/tests/: run.cpp
output/dubins_car/: README  best_trajectory_inputs.txt  best_trajectory_inputs_100k_iter.txt  best_trajectory_inputs_2k_iter.txt  best_trajectory_states.txt  best_trajectory_states_100k_iter.txt  best_trajectory_states_2k_iter.txt  plot_states.py
python_plotting/: .python_plot_double_integrator.py.swp  plot_statistics_graph.py  python_plot_double_integrator.py  python_plot_dubins_car.py  python_plot_test_signed_distance.py
(+175 files in other folders)
